# phrame

./: Cargo.toml  README.md
crates/interphace/: Cargo.toml
crates/interphace/src/: application.rs  backend.rs  graphics_context.rs  lib.rs  window.rs
crates/phrame/: Cargo.toml
crates/phrame/src/: main.rs
crates/poc/: Cargo.toml
crates/poc/src/: renderer.rs
src/: main.rs  renderer.rs
