[package]
name = "frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git" }
wayland-client = "0.30.0"
skia-safe = { version = "0.57.0", default-features = false, features = [
    "wayland",
] }
glutin = "0.30.3"
glow = "0.11.2"
env_logger = "0.10.0"
raw-window-handle = "0.5.0"

wayland-backend = { version = "0.1.0", features = ["client_system"] }
